feat: Enhance ESP32-S3 Entry Hub with Home Assistant person tracking and integration status updates
- Updated config.json to change weather provider to Home Assistant and added presence tracking configuration.
- Modified app.js to include person tracking functionality, including loading, adding, and removing tracked persons.
- Updated index.html to reflect changes in settings and added a modal for selecting persons to track.
- Enhanced style.css with styles for person tracking and modal components.
- Updated config.h to clarify OTA password usage.
- Modified web_server.h to add new API handlers for Home Assistant person tracking.
- Updated platformio.ini to adjust HTTP download unit size.
- Enhanced main.cpp to test integrations on startup and publish detailed system status.
- Updated web_server.cpp to handle Home Assistant person fetching and improve API endpoint handling.

--- a/data/config.json
+++ b/data/config.json
@@ -25,7 +25,7 @@
         "sleep_timeout": 60000
     },
     "weather": {
-        "provider": "none",
+        "provider": "home_assistant",
         "openweathermap": {
             "api_key": "",
             "city": "",
@@ -50,6 +50,12 @@
         "calendar": {
             "enabled": false,
             "url": ""
+        }
+    },
+    "presence": {
+        "enabled": false,
+        "home_assistant": {
+            "entity_ids": []
         }
     }
 }
