--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,9 @@ build_flags =
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DARDUINO_USB_MODE=1
     -D CONFIG_SPIRAM_CACHE_WORKAROUND
-    -DHTTP_DOWNLOAD_UNIT_SIZE=16384
+    -DHTTP_DOWNLOAD_UNIT_SIZE=1436
     -DWIFIMANAGER_OVERRIDE_STRINGS
+    -Wno-macro-redefined
 
 ; Partition scheme for OTA
 board_build.partitions = partitions_8MB.csv
