feat: Update configuration handling and improve presence tracking functionality

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,8 +30,7 @@ lib_deps =
     ; WiFi and Network
     bblanchon/ArduinoJson@^7.2.1
     knolleary/PubSubClient@^2.8
-    me-no-dev/ESPAsyncWebServer@^1.2.3
-    me-no-dev/AsyncTCP@^1.1.1
+    mathieucarbou/ESPAsyncWebServer @ 3.6.0
     
     ; Configuration and Storage
     https://github.com/tzapu/WiFiManager.git
