--- a/data/config.json
+++ b/data/config.json
@@ -25,7 +25,7 @@
         "sleep_timeout": 60000
     },
     "weather": {
-        "provider": "home_assistant",
+        "provider": "homeassistant",
         "openweathermap": {
             "api_key": "",
             "city": "",
