--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,7 @@
 ; ESP32-S3 Entry Hub - Advanced Voice-Controlled Access Panel
 ; PlatformIO Project Configuration File
+; Hardware: ESP32-S3 N16R8 (16MB Flash + 8MB PSRAM)
+; Display: 3.5" ILI9488 480x320 IPS + FT6236 Touch
 
 [env:esp32-s3-devkitc-1]
 platform = espressif32
@@ -9,6 +11,11 @@ framework = arduino
 ; Upload settings
 upload_speed = 921600
 monitor_speed = 115200
+
+; Board configuration for N16R8
+board_build.flash_size = 16MB
+board_build.psram_type = opi
+board_upload.flash_size = 16MB
 
 ; Build flags
 build_flags = 
@@ -20,9 +27,27 @@ build_flags =
     -DHTTP_DOWNLOAD_UNIT_SIZE=1436
     -DWIFIMANAGER_OVERRIDE_STRINGS
     -Wno-macro-redefined
+    ; TFT_eSPI configuration
+    -DUSER_SETUP_LOADED=1
+    -DILI9488_DRIVER=1
+    -DTFT_WIDTH=320
+    -DTFT_HEIGHT=480
+    -DTFT_MOSI=11
+    -DTFT_MISO=13
+    -DTFT_SCLK=12
+    -DTFT_CS=10
+    -DTFT_DC=8
+    -DTFT_RST=9
+    -DTFT_BL=46
+    -DSPI_FREQUENCY=40000000
+    -DSPI_READ_FREQUENCY=20000000
+    -DTOUCH_CS=-1
+    ; LVGL configuration
+    -DLV_CONF_INCLUDE_SIMPLE
+    -DLV_TICK_PERIOD_MS=5
 
-; Partition scheme for OTA
-board_build.partitions = partitions_8MB.csv
+; Partition scheme for 16MB flash with OTA
+board_build.partitions = default_16MB.csv
 board_build.filesystem = littlefs
 
 ; Libraries
@@ -38,6 +63,13 @@ lib_deps =
     ; Time and utilities
     arduino-libraries/NTPClient@^3.2.1
     adafruit/Adafruit BusIO@^1.14.1
+    
+    ; Display (uncomment when display hardware is connected)
+    ; bodmer/TFT_eSPI@^2.5.43
+    ; lvgl/lvgl@^8.3.11
+    
+    ; Touch (uncomment when display hardware is connected)
+    ; aselectroworks/FT6336U@^1.0.3
 
 ; Extra scripts
 extra_scripts = 
