feat: Implement MQTT configuration and management via web UI

--- a/include/secrets.h.example
+++ b/include/secrets.h.example
@@ -5,12 +5,6 @@
 #define WIFI_SSID "your-wifi-ssid"
 #define WIFI_PASSWORD "your-wifi-password"
 
-// MQTT Broker
-#define MQTT_BROKER "192.168.1.100"
-#define MQTT_PORT 1883
-#define MQTT_USER "your-mqtt-user"
-#define MQTT_PASSWORD "your-mqtt-password"
-
 // OTA Password
 #define OTA_PASSWORD "your-ota-password"
 
@@ -18,8 +12,10 @@
 #define WEATHER_API_KEY "your-openweather-api-key"
 #define PORCUPINE_ACCESS_KEY "your-porcupine-access-key"
 
-// Home Assistant
+// Home Assistant (optional - can be configured via web UI)
 #define HA_BASE_URL "http://homeassistant.local:8123"
 #define HA_TOKEN "your-long-lived-access-token"
+
+// Note: MQTT settings are now configured via the web UI (Integrations page)
 
 #endif
