--- a/data/config.json
+++ b/data/config.json
@@ -12,7 +12,8 @@
     "mqtt": {
         "enabled": true,
         "broker": "192.168.1.100",
-        "port": 1883
+        "port": 1883,
+        "validated": false
     },
     "voice": {
         "wake_word": "jarvis",
