feat: Update display manager with initialization, boot screen, and status display functionality

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,21 +13,21 @@ upload_speed = 921600
 monitor_speed = 115200
 
 ; Board configuration for N16R8
+; Note: PSRAM disabled - detection fails (may conflict with display SPI pins)
 board_build.flash_size = 16MB
-board_build.psram_type = opi
 board_upload.flash_size = 16MB
 
 ; Build flags
 build_flags = 
     -DCORE_DEBUG_LEVEL=3
-    -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DARDUINO_USB_MODE=1
     -D CONFIG_SPIRAM_CACHE_WORKAROUND
+    -D CONFIG_PM_ENABLE=0
     -DHTTP_DOWNLOAD_UNIT_SIZE=1436
     -DWIFIMANAGER_OVERRIDE_STRINGS
     -Wno-macro-redefined
-    ; TFT_eSPI configuration
+    ; TFT_eSPI configuration for ESP32-S3
     -DUSER_SETUP_LOADED=1
     -DILI9488_DRIVER=1
     -DTFT_WIDTH=320
@@ -39,9 +39,18 @@ build_flags =
     -DTFT_DC=8
     -DTFT_RST=9
     -DTFT_BL=46
+    -DUSE_HSPI_PORT=1
     -DSPI_FREQUENCY=40000000
     -DSPI_READ_FREQUENCY=20000000
     -DTOUCH_CS=-1
+    -DLOAD_GLCD=1
+    -DLOAD_FONT2=1
+    -DLOAD_FONT4=1
+    -DLOAD_FONT6=1
+    -DLOAD_FONT7=1
+    -DLOAD_FONT8=1
+    -DLOAD_GFXFF=1
+    -DSMOOTH_FONT=1
     ; LVGL configuration
     -DLV_CONF_INCLUDE_SIMPLE
     -DLV_TICK_PERIOD_MS=5
@@ -64,11 +73,10 @@ lib_deps =
     arduino-libraries/NTPClient@^3.2.1
     adafruit/Adafruit BusIO@^1.14.1
     
-    ; Display (uncomment when display hardware is connected)
-    ; bodmer/TFT_eSPI@^2.5.43
-    ; lvgl/lvgl@^8.3.11
+    ; Display
+    bodmer/TFT_eSPI@^2.5.43
     
-    ; Touch (uncomment when display hardware is connected)
+    ; Touch (for future implementation)
     ; aselectroworks/FT6336U@^1.0.3
 
 ; Extra scripts
