feat: Integrate FastLED library for RGB LED control and update LED feedback implementation

--- a/platformio.ini
+++ b/platformio.ini
@@ -76,6 +76,9 @@ lib_deps =
     ; Display
     bodmer/TFT_eSPI@^2.5.43
     
+    ; RGB LED
+    fastled/FastLED@^3.7.0
+    
     ; Touch (for future implementation)
     ; aselectroworks/FT6336U@^1.0.3
 
