--- a/platformio.ini
+++ b/platformio.ini
@@ -12,16 +12,18 @@ framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 
-; Board configuration for N16R8
-; Note: PSRAM disabled - detection fails (may conflict with display SPI pins)
+; Board configuration for N16R8 (16MB Flash + 8MB Octal PSRAM)
 board_build.flash_size = 16MB
 board_upload.flash_size = 16MB
+board_build.arduino.memory_type = qio_opi
+board_build.psram_type = opi
 
 ; Build flags
 build_flags = 
     -DCORE_DEBUG_LEVEL=3
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DARDUINO_USB_MODE=1
+    -DBOARD_HAS_PSRAM=1
     -D CONFIG_SPIRAM_CACHE_WORKAROUND
     -D CONFIG_PM_ENABLE=0
     -DHTTP_DOWNLOAD_UNIT_SIZE=1436
