feat: Implement touch functionality with FT6X36 support in DisplayManager

--- a/platformio.ini
+++ b/platformio.ini
@@ -81,8 +81,8 @@ lib_deps =
     ; RGB LED
     fastled/FastLED@^3.7.0
     
-    ; Touch (for future implementation)
-    ; aselectroworks/FT6336U@^1.0.3
+    ; Touch - FT6236 capacitive touch
+    https://github.com/strange-v/FT6X36.git
 
 ; Extra scripts
 extra_scripts = 
