--- a/platformio.ini
+++ b/platformio.ini
@@ -53,9 +53,10 @@ build_flags =
     -DLOAD_FONT8=1
     -DLOAD_GFXFF=1
     -DSMOOTH_FONT=1
-    ; LVGL configuration
+    ; LVGL configuration - use include path for lv_conf.h
     -DLV_CONF_INCLUDE_SIMPLE
     -DLV_TICK_PERIOD_MS=5
+    -I${PROJECT_DIR}/include
 
 ; Partition scheme for 16MB flash with OTA
 board_build.partitions = default_16MB.csv
@@ -77,6 +78,7 @@ lib_deps =
     
     ; Display
     bodmer/TFT_eSPI@^2.5.43
+    lvgl/lvgl@^8.3.11
     
     ; RGB LED
     fastled/FastLED@^3.7.0
